Not very good, admittedly, but done

--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
 
 <body>
     <div class="container">
-
         <div class="header">
-
             <div class="top-row">
                 <div id="search">
                     <i class="fa fa-search"></i>
@@ -26,27 +24,188 @@
                     <div id="name">Morgan Oakely</div>
                 </div>
             </div>
-
             <div class="bottom-row">
                 <div class="left-content">
                     <img class="image" src="images/416400_call center_customer support_icon.svg" alt="">
                     <div class="twitter-text">
                         <p id="hi"> Hi there,</p>
-                        <p id="name">Morgan Oakely(@morgan)</p>
+                        <p id="name-large">Morgan Oakely(@morgan)</p>
                     </div>
+                </div>
+                <div class="right-content">
+                    <button>New</button>
+                    <button>Upload</button>
+                    <button>Share</button>
                 </div>
             </div>
 
-           
+        </div>
+        <div class="sidebar">
+            <div class="dashboard">
+                <img class="icon" src="images/earth.svg" alt="earth icon">
+                <p id="name-large">Dashboard</p>
+            </div>
+            <div class="actions">
+                <div class="options">
+                    <img class="icon" src="images/2849819_multimedia_construction_building_home_house_icon.svg" alt="">
+                    <p id="option-text">Home</p>
+                </div>
+                <div class="options">
+                    <img class="icon" src="images/2793009_christmas_father christmas_present_xmas_icon.svg"
+                        alt="Profile">
+                    <p id="option-text">Profile</p>
+                </div>
 
+                <div class="options">
+                    <img class="icon" src="images/2849820_pen_pencil_write_draw_design_icon.svg" alt="">
+                    <p id="option-text">Messages</p>
+                </div>
+                <div class="options">
+                    <img class="icon" src="images/2849825_romance_multimedia_love_like_heart_icon.svg" alt="">
+                    <p id="option-text">History</p>
+                </div>
+                <div class="options">
+                    <img class="icon" src="images/2849826_finger_interaction_hand_like_multimedia_icon.svg" alt="">
+                    <p id="option-text">Tasks</p>
+                </div>
+                <div class="options">
+                    <img class="icon" src="images/2793045_christmas_icicle_snow_snow flake_xmas_icon.svg" alt="">
+                    <p id="option-text">Communities</p>
+                </div>
+            </div>
+            <div class="siderbar-settings">
+                <div class="options">
+                    <img class="icon" src="images/326700_cart_shopping_icon.svg" alt="">
+                    <p id="option-text">Settings</p>
+                </div>
+                <div class="options">
+                    <img class="icon" src="images/2793009_christmas_father christmas_present_xmas_icon.svg" alt="">
+                    <p id="option-text">Support</p>
+                </div>
+                <div class="options">
+                    <img class="icon" src="images/2849825_romance_multimedia_love_like_heart_icon.svg" alt="">
+                    <p id="option-text">Privacy</p>
+                </div>
+            </div>
+        </div>
+        <div class="main-content">
+            <div class="projects">
+                <div id="titles">Your Projects</div>
+                <div class="article">
+                    <div class="card">
+                        <p class="title">Super Cool Project</p>
+                        <p>Sed tempus ut lacus ut scelerisque. Suspendisse solicitudin nibh erat, id facilisis accumsan
+                            nec.</p>
+                        <div class="card-icons">
+                            <img class="card-pic" src="images/arrow-projectile.svg" alt="">
+                            <img class="card-pic" src="images/axe-battle.svg" alt="">
+                            <img class="card-pic" src="images/arrow-projectile-multiple.svg" alt="">
+                        </div>
+                    </div>
+                    <div class="card">
+                        <p class="title">Super Cool Project</p>
+                        <p>Sed tempus ut lacus ut scelerisque. Suspendisse solicitudin nibh erat, id facilisis accumsan
+                            nec.</p>
+                        <div class="card-icons">
+                            <img class="card-pic" src="images/arrow-projectile.svg" alt="">
+                            <img class="card-pic" src="images/axe-battle.svg" alt="">
+                            <img class="card-pic" src="images/arrow-projectile-multiple.svg" alt="">
+                        </div>
+                    </div>
+                    <div class="card">
+                        <p class="title">Super Cool Project</p>
+                        <p>Sed tempus ut lacus ut scelerisque. Suspendisse solicitudin nibh erat, id facilisis accumsan
+                            nec.</p>
+                        <div class="card-icons">
+                            <img class="card-pic" src="images/arrow-projectile.svg" alt="">
+                            <img class="card-pic" src="images/axe-battle.svg" alt="">
+                            <img class="card-pic" src="images/arrow-projectile-multiple.svg" alt="">
+                        </div>
+                    </div>
+                    <div class="card">
+                        <p class="title">Super Cool Project</p>
+                        <p>Sed tempus ut lacus ut scelerisque. Suspendisse solicitudin nibh erat, id facilisis accumsan
+                            nec.</p>
+                        <div class="card-icons">
+                            <img class="card-pic" src="images/arrow-projectile.svg" alt="">
+                            <img class="card-pic" src="images/axe-battle.svg" alt="">
+                            <img class="card-pic" src="images/arrow-projectile-multiple.svg" alt="">
+                        </div>
+                    </div>
+                    <div class="card">
+                        <p class="title">Super Cool Project</p>
+                        <p>Sed tempus ut lacus ut scelerisque. Suspendisse solicitudin nibh erat, id facilisis accumsan
+                            nec.</p>
+                        <div class="card-icons">
+                            <img class="card-pic" src="images/arrow-projectile.svg" alt="">
+                            <img class="card-pic" src="images/axe-battle.svg" alt="">
+                            <img class="card-pic" src="images/arrow-projectile-multiple.svg" alt="">
+                        </div>
+                    </div>
+                    <div class="card">
+                        <p class="title">Super Cool Project</p>
+                        <p>Sed tempus ut lacus ut scelerisque. Suspendisse solicitudin nibh erat, id facilisis accumsan
+                            nec.</p>
+                        <div class="card-icons">
+                            <img class="card-pic" src="images/arrow-projectile.svg" alt="">
+                            <img class="card-pic" src="images/axe-battle.svg" alt="">
+                            <img class="card-pic" src="images/arrow-projectile-multiple.svg" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="announcements">
+                <div id="titles">Announcements</div>
+                <div class="maintenance-card">
+                    <div clas="maintenance-content">
+                        <h4 class="maintenance-title">Site Maintenance</h4>
+                        <p>Vestibulum condimentum tellus lacus, in accumsan elit maximus ac. Donec hendrerit sodales
+                            congue...</p>
+                        <hr>
+                    </div>
+                    <div clas="maintenance-content">
+                        <h4 class="maintenance-title">Community Share Day</h4>
+                        <p>Vestibulum condimentum tellus lacus, in accumsan elit maximus ac. Donec hendrerit sodales
+                            congue...</p>
+                        <hr>
+                    </div>
+                    <div clas="maintenance-content">
+                        <h4 class="maintenance-title">Updated Privacy Policy</h4>
+                        <p>Vestibulum condimentum tellus lacus, in accumsan elit maximus ac. Donec hendrerit sodales
+                            congue...</p>
+                    </div>
+                </div>
+                <div id="titles">Trending</div>
+                <div class="maintenance-card">
+                    <div class="options">
+                        <img class="icon" src="images/duck.svg" alt="">
+                        <p id="option-text">@tegan<br>
+                            World Peace Builder
+                        </p>
+                    </div>
+                    <div class="options">
+                        <img class="icon" src="images/google-downasaur.svg" alt="">
+                        <p id="option-text">@morgan<br>
+                            Super Cool project
+                        </p>
+                    </div>
+                    <div class="options">
+                        <img class="icon" src="images/horse.svg" alt="">
+                        <p id="option-text">@kendall<br>
+                            Super Cool Project
+                        </p>
+                    </div>
+                    <div class="options">
+                        <img class="icon" src="images/earth.svg" alt="">
+                        <p id="option-text">@Alex<br>
+                            No Traffic Maker
+                        </p>
+                    </div>
+                </div>
+
+            </div>
         </div>
     </div>
-    <div class="sidebar"></div>
-    <div class="main-content"></div>
-
-    </div>
-
-
 </body>
 
 </html>
